chore: build analog clock html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <img class="big" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/32887/fred.svg" alt="" width="150">
-  <img class="small" style="color: pink;" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/32887/fred.svg" alt="" width="100">
+  <!-- <img class="big" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/32887/fred.svg" alt="" width="150">
+  <img class="small" style="color: pink;" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/32887/fred.svg" alt="" width="100"> -->
+  <header>
+    <div class="digital-time-container">
+      time
+    </div>
+  </header>
+  <main>
+    <div class="clock-wrapper">
+      <span id="learn">Learn Linux in 2025</span>
+      <span id="ls">ls</span>
+      <span id="cd">cd</span>
+      <span id="mv">mv</span>
+      <span id="cp">cp</span>
+      <span id="second-hand">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" width="20px" alt="tuxy">
+      </span>
+      <span id="minute-hand">
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18" />
+        </svg> -->
+      </span>
+      <span id="hour-hand">
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18" />
+        </svg>         -->
+      </span>
+    </div>
+  </main>
+  
+
+
+
+
+
+
+
+
+
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="script.js"></script>
 </body>
