--- a/kali.html
+++ b/kali.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Timeline</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="kali.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
   <!-- <img class="big" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/32887/fred.svg" alt="" width="150">
@@ -15,12 +17,15 @@
     </div>
     <button class="the-button">
       click
+      <span id="close">
+        <i class='bx bx-md bxs-x-circle' style='color:#d33131'  ></i>
+      </span>
     </button>
   </header>
   <main>
     <div class="clock-wrapper">
       <span id="learn">Learn Linux in 2025</span>
-      <span id="ls">ls</span>
+      
       <span id="cd">cd</span>
       <span id="mv">mv</span>
       <span id="cp">cp</span>
@@ -53,6 +58,6 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-  <script src="script.js"></script>
+  <script src="kali.js"></script>
 </body>
 </html>
